<resources>
    <string name="nombre_del_evento">Nombre del evento</string>
    <string name="ubicacion_del_evento">Ubicacion</string>
    <string name="descripcion_del_evento">Descripcion</string>
    <string name="fecha_del_evento">Fecha</string>
    <string name="hora_del_evento">Hora</string>
    <string name="app_name">JyC</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="email">Correo electrónico</string>
    <string name="reemail">Confirmar correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">¿Se te olvidó tu contraseña?</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="pass_confirm">Confirmar contraseña</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Cerrar sesión</string>
    <string name="selecione_banner">Selecione Banner</string>
    <string name="tomar_foto">Capturar imagen</string>

    <string name="descartar">Descartar</string>
    <string name="publicar">Publicar</string>
    <string name="en_persona">En Persona</string>
    <string name="title_activity_imagen_detail">ImagenDetail</string>
    <string name="localidad_barrio">Localidad/Barrio</string>
    <string name="provincia">Provincia</string>
    <string name="calle">Calle</string>
    <string name="n_mero">Número</string>
    <string name="piso">Piso (Opcional)</string>
    <string name="calle_1">Calle 1 (Opcional)</string>
    <string name="calle_2">Calle 2 (Opcional)</string>
    <string name="escriba_un_comentario_aqui">Escriba un comentario aqui!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="codigo_postal">Codigo Postal</string>

</resources>