<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_testActivity"
        android:title="TEST Functions DEV" />

    <item
        android:id="@+id/nav_new_pub"
        android:title="Nueva publicacion" />

    <item
        android:id="@+id/nav_profile"
        android:title="Mi Perfil"
        />
    <item
        android:id="@+id/nav_new_event"
        android:title="Crear evento" />

    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout" />

</menu>