<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity">

    <include
        android:id="@+id/myToolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <EditText
                android:id="@+id/editTextTextNombreEvento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/nombre_del_evento"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBanner" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:hint="@string/fecha_del_evento"
                android:inputType="date"
                android:maxLines="1"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextNombreEvento" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:hint="@string/hora_del_evento"
                android:inputType="time"
                android:maxLines="1"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextNombreEvento" />

            <EditText
                android:id="@+id/editTextTextMultiLineEvento"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/descripcion_del_evento"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

            <ImageView
                android:id="@+id/imageViewBanner"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@drawable/ic_menu_gallery" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLineEvento">

                <RadioButton
                    android:id="@+id/radioButtonEnPersona"
                    android:layout_width="150dp"
                    android:layout_height="43dp"
                    android:layout_margin="8dp"
                    android:text="@string/en_persona"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButtonUrl"
                    android:layout_width="150dp"
                    android:layout_height="43dp"
                    android:layout_margin="8dp"
                    android:text="Online"
                    android:textSize="18sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/editTextTextUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="80dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="Url"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="60dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                <EditText
                    android:id="@+id/editTextNumero"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/n_mero"
                    android:inputType="number"
                    app:layout_constraintEnd_toStartOf="@+id/editTextPiso"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextCalle" />

                <EditText
                    android:id="@+id/editTextPiso"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/piso"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editTextNumero"
                    app:layout_constraintTop_toBottomOf="@+id/editTextCalle" />

                <EditText
                    android:id="@+id/editTextLocalidad"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="@string/localidad_barrio"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toStartOf="@+id/editTextCp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextProvincia" />

                <EditText
                    android:id="@+id/editTextProvincia"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/provincia"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextProvincia3"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="200dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/n_mero"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editTextCalle"
                    app:layout_constraintTop_toBottomOf="@+id/editTextLocalidad" />

                <EditText
                    android:id="@+id/editTextCalle"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/calle"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextLocalidad" />

                <EditText
                    android:id="@+id/editTextEntreCalle1"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/calle_1"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNumero" />

                <EditText
                    android:id="@+id/editTextEntreCalle2"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/calle_2"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEntreCalle1" />

                <EditText
                    android:id="@+id/editTextCp"
                    android:layout_width="120dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="Codigo Postal"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editTextLocalidad"
                    app:layout_constraintTop_toBottomOf="@+id/editTextProvincia" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_begin="736dp" />

            <Button
                android:id="@+id/buttonPublicarEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="20dp"
                android:text="@string/publicar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline8" />

            <Button
                android:id="@+id/buttonDescartarEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/descartar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonPublicarEvento" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"
                android:hint="@string/selecione_banner"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>